Documents/University/Year_2/iac/Labs/CompilersCoursework4/langproc-2022-cw-main/src/c_parser.output
Nonterminals useless in grammar

    struct_declaration_list
    struct_declaration
    struct_declarator_list
    struct_declarator
    enumerator_list
    enumerator


Rules useless in grammar

  128 struct_declaration_list: struct_declaration
  129                        | struct_declaration_list struct_declaration

  130 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

  131 struct_declarator_list: struct_declarator
  132                       | struct_declarator_list ',' struct_declarator

  133 struct_declarator: declarator
  134                  | ':' constant_expression
  135                  | declarator ':' constant_expression

  136 enumerator_list: enumerator
  137                | enumerator_list ',' enumerator

  138 enumerator: IDENTIFIER
  139           | IDENTIFIER '=' constant_expression


State 202 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | CONSTANT
    3                   | STRING_LITERAL
    4                   | '(' expression ')'

    5 postfix_expression: primary_expression
    6                   | postfix_expression '[' expression ']'
    7                   | postfix_expression '(' ')'
    8                   | postfix_expression '(' argument_expression_list ')'
    9                   | postfix_expression '.' IDENTIFIER

   10 argument_expression_list: assignment_expression
   11                         | argument_expression_list ',' assignment_expression

   12 unary_expression: postfix_expression
   13                 | unary_operator cast_expression

   14 unary_operator: '&'
   15               | '*'
   16               | '+'
   17               | '-'
   18               | '!'

   19 cast_expression: unary_expression
   20                | '(' type_name ')' cast_expression

   21 multiplicative_expression: cast_expression
   22                          | multiplicative_expression '*' cast_expression
   23                          | multiplicative_expression '/' cast_expression
   24                          | multiplicative_expression '%' cast_expression

   25 additive_expression: multiplicative_expression
   26                    | additive_expression '+' multiplicative_expression
   27                    | additive_expression '-' multiplicative_expression

   28 shift_expression: additive_expression

   29 relational_expression: shift_expression
   30                      | relational_expression '<' shift_expression
   31                      | relational_expression '>' shift_expression

   32 equality_expression: relational_expression
   33                    | equality_expression EQ_OP relational_expression
   34                    | equality_expression NE_OP relational_expression

   35 and_expression: equality_expression
   36               | and_expression '&' equality_expression

   37 exclusive_or_expression: and_expression
   38                        | exclusive_or_expression '^' and_expression

   39 inclusive_or_expression: exclusive_or_expression
   40                        | inclusive_or_expression '|' exclusive_or_expression

   41 logical_and_expression: inclusive_or_expression

   42 logical_or_expression: logical_and_expression

   43 conditional_expression: logical_or_expression
   44                       | logical_or_expression '?' expression ':' conditional_expression

   45 assignment_expression: conditional_expression
   46                      | unary_expression assignment_operator assignment_expression

   47 assignment_operator: '='

   48 expression: assignment_expression
   49           | expression ',' assignment_expression

   50 constant_expression: conditional_expression

   51 declaration: declaration_specifiers ';'
   52            | declaration_specifiers init_declarator_list ';'

   53 declaration_specifiers: type_specifier
   54                       | type_specifier declaration_specifiers

   55 init_declarator_list: init_declarator
   56                     | init_declarator_list ',' init_declarator

   57 init_declarator: declarator
   58                | declarator '=' initializer

   59 type_specifier: INT
   60               | TYPE_NAME

   61 specifier_qualifier_list: type_specifier specifier_qualifier_list
   62                         | type_specifier

   63 declarator: direct_declarator

   64 direct_declarator: IDENTIFIER
   65                  | '(' declarator ')'
   66                  | direct_declarator '[' constant_expression ']'
   67                  | direct_declarator '[' ']'
   68                  | direct_declarator '(' parameter_type_list ')'
   69                  | direct_declarator '(' identifier_list ')'
   70                  | direct_declarator '(' ')'

   71 parameter_type_list: parameter_list

   72 parameter_list: parameter_declaration
   73               | parameter_list ',' parameter_declaration

   74 parameter_declaration: declaration_specifiers declarator
   75                      | declaration_specifiers abstract_declarator
   76                      | declaration_specifiers

   77 identifier_list: IDENTIFIER
   78                | identifier_list ',' IDENTIFIER

   79 type_name: specifier_qualifier_list
   80          | specifier_qualifier_list abstract_declarator

   81 abstract_declarator: direct_abstract_declarator

   82 direct_abstract_declarator: '(' abstract_declarator ')'
   83                           | '[' ']'
   84                           | '[' constant_expression ']'
   85                           | direct_abstract_declarator '[' ']'
   86                           | direct_abstract_declarator '[' constant_expression ']'
   87                           | '(' ')'
   88                           | '(' parameter_type_list ')'
   89                           | direct_abstract_declarator '(' ')'
   90                           | direct_abstract_declarator '(' parameter_type_list ')'

   91 initializer: assignment_expression
   92            | '{' initializer_list '}'
   93            | '{' initializer_list ',' '}'

   94 initializer_list: initializer
   95                 | initializer_list ',' initializer

   96 statement: labeled_statement
   97          | compound_statement
   98          | expression_statement
   99          | selection_statement
  100          | iteration_statement
  101          | jump_statement

  102 labeled_statement: IDENTIFIER ':' statement

  103 compound_statement: '{' '}'
  104                   | '{' statement_list '}'
  105                   | '{' declaration_list '}'
  106                   | '{' declaration_list statement_list '}'

  107 declaration_list: declaration
  108                 | declaration_list declaration

  109 statement_list: statement
  110               | statement_list statement

  111 expression_statement: ';'
  112                     | expression ';'

  113 selection_statement: IF '(' expression ')' statement
  114                    | IF '(' expression ')' statement ELSE statement

  115 iteration_statement: WHILE '(' expression ')' statement
  116                    | FOR '(' expression_statement expression_statement ')' statement
  117                    | FOR '(' expression_statement expression_statement expression ')' statement

  118 jump_statement: RETURN ';'
  119               | RETURN expression ';'

  120 translation_unit: external_declaration
  121                 | translation_unit external_declaration

  122 external_declaration: function_definition
  123                     | declaration

  124 function_definition: declaration_specifiers declarator declaration_list compound_statement
  125                    | declaration_specifiers declarator compound_statement
  126                    | declarator declaration_list compound_statement
  127                    | declarator compound_statement


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 18
    '%' (37) 24
    '&' (38) 14 36
    '(' (40) 4 7 8 20 65 68 69 70 82 87 88 89 90 113 114 115 116 117
    ')' (41) 4 7 8 20 65 68 69 70 82 87 88 89 90 113 114 115 116 117
    '*' (42) 15 22
    '+' (43) 16 26
    ',' (44) 11 49 56 73 78 93 95
    '-' (45) 17 27
    '.' (46) 9
    '/' (47) 23
    ':' (58) 44 102
    ';' (59) 51 52 111 112 118 119
    '<' (60) 30
    '=' (61) 47 58
    '>' (62) 31
    '?' (63) 44
    '[' (91) 6 66 67 83 84 85 86
    ']' (93) 6 66 67 83 84 85 86
    '^' (94) 38
    '{' (123) 92 93 103 104 105 106
    '|' (124) 40
    '}' (125) 92 93 103 104 105 106
    error (256)
    IDENTIFIER (258) 1 9 64 77 78 102
    CONSTANT (259) 2
    STRING_LITERAL (260) 3
    EQ_OP (261) 33
    NE_OP (262) 34
    TYPE_NAME (263) 60
    INT (264) 59
    IF (265) 113 114
    ELSE (266) 114
    WHILE (267) 115
    FOR (268) 116 117
    RETURN (269) 118 119


Nonterminals, with rules where they appear

    $accept (38)
        on left: 0
    primary_expression (39)
        on left: 1 2 3 4
        on right: 5
    postfix_expression (40)
        on left: 5 6 7 8 9
        on right: 6 7 8 9 12
    argument_expression_list (41)
        on left: 10 11
        on right: 8 11
    unary_expression (42)
        on left: 12 13
        on right: 19 46
    unary_operator (43)
        on left: 14 15 16 17 18
        on right: 13
    cast_expression (44)
        on left: 19 20
        on right: 13 20 21 22 23 24
    multiplicative_expression (45)
        on left: 21 22 23 24
        on right: 22 23 24 25 26 27
    additive_expression (46)
        on left: 25 26 27
        on right: 26 27 28
    shift_expression (47)
        on left: 28
        on right: 29 30 31
    relational_expression (48)
        on left: 29 30 31
        on right: 30 31 32 33 34
    equality_expression (49)
        on left: 32 33 34
        on right: 33 34 35 36
    and_expression (50)
        on left: 35 36
        on right: 36 37 38
    exclusive_or_expression (51)
        on left: 37 38
        on right: 38 39 40
    inclusive_or_expression (52)
        on left: 39 40
        on right: 40 41
    logical_and_expression (53)
        on left: 41
        on right: 42
    logical_or_expression (54)
        on left: 42
        on right: 43 44
    conditional_expression (55)
        on left: 43 44
        on right: 44 45 50
    assignment_expression (56)
        on left: 45 46
        on right: 10 11 46 48 49 91
    assignment_operator (57)
        on left: 47
        on right: 46
    expression (58)
        on left: 48 49
        on right: 4 6 44 49 112 113 114 115 117 119
    constant_expression (59)
        on left: 50
        on right: 66 84 86
    declaration (60)
        on left: 51 52
        on right: 107 108 123
    declaration_specifiers (61)
        on left: 53 54
        on right: 51 52 54 74 75 76 124 125
    init_declarator_list (62)
        on left: 55 56
        on right: 52 56
    init_declarator (63)
        on left: 57 58
        on right: 55 56
    type_specifier (64)
        on left: 59 60
        on right: 53 54 61 62
    specifier_qualifier_list (65)
        on left: 61 62
        on right: 61 79 80
    declarator (66)
        on left: 63
        on right: 57 58 65 74 124 125 126 127
    direct_declarator (67)
        on left: 64 65 66 67 68 69 70
        on right: 63 66 67 68 69 70
    parameter_type_list (68)
        on left: 71
        on right: 68 88 90
    parameter_list (69)
        on left: 72 73
        on right: 71 73
    parameter_declaration (70)
        on left: 74 75 76
        on right: 72 73
    identifier_list (71)
        on left: 77 78
        on right: 69 78
    type_name (72)
        on left: 79 80
        on right: 20
    abstract_declarator (73)
        on left: 81
        on right: 75 80 82
    direct_abstract_declarator (74)
        on left: 82 83 84 85 86 87 88 89 90
        on right: 81 85 86 89 90
    initializer (75)
        on left: 91 92 93
        on right: 58 94 95
    initializer_list (76)
        on left: 94 95
        on right: 92 93 95
    statement (77)
        on left: 96 97 98 99 100 101
        on right: 102 109 110 113 114 115 116 117
    labeled_statement (78)
        on left: 102
        on right: 96
    compound_statement (79)
        on left: 103 104 105 106
        on right: 97 124 125 126 127
    declaration_list (80)
        on left: 107 108
        on right: 105 106 108 124 126
    statement_list (81)
        on left: 109 110
        on right: 104 106 110
    expression_statement (82)
        on left: 111 112
        on right: 98 116 117
    selection_statement (83)
        on left: 113 114
        on right: 99
    iteration_statement (84)
        on left: 115 116 117
        on right: 100
    jump_statement (85)
        on left: 118 119
        on right: 101
    translation_unit (86)
        on left: 120 121
        on right: 0 121
    external_declaration (87)
        on left: 122 123
        on right: 120 121
    function_definition (88)
        on left: 124 125 126 127
        on right: 122


State 0

    0 $accept: . translation_unit $end

    IDENTIFIER  shift, and go to state 1
    TYPE_NAME   shift, and go to state 2
    INT         shift, and go to state 3
    '('         shift, and go to state 4

    declaration             go to state 5
    declaration_specifiers  go to state 6
    type_specifier          go to state 7
    declarator              go to state 8
    direct_declarator       go to state 9
    translation_unit        go to state 10
    external_declaration    go to state 11
    function_definition     go to state 12


State 1

   64 direct_declarator: IDENTIFIER .

    $default  reduce using rule 64 (direct_declarator)


State 2

   60 type_specifier: TYPE_NAME .

    $default  reduce using rule 60 (type_specifier)


State 3

   59 type_specifier: INT .

    $default  reduce using rule 59 (type_specifier)


State 4

   65 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 4

    declarator         go to state 13
    direct_declarator  go to state 9


State 5

  123 external_declaration: declaration .

    $default  reduce using rule 123 (external_declaration)


State 6

   51 declaration: declaration_specifiers . ';'
   52            | declaration_specifiers . init_declarator_list ';'
  124 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  125                    | declaration_specifiers . declarator compound_statement

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 4
    ';'         shift, and go to state 14

    init_declarator_list  go to state 15
    init_declarator       go to state 16
    declarator            go to state 17
    direct_declarator     go to state 9


State 7

   53 declaration_specifiers: type_specifier .
   54                       | type_specifier . declaration_specifiers

    TYPE_NAME  shift, and go to state 2
    INT        shift, and go to state 3

    $default  reduce using rule 53 (declaration_specifiers)

    declaration_specifiers  go to state 18
    type_specifier          go to state 7


State 8

  126 function_definition: declarator . declaration_list compound_statement
  127                    | declarator . compound_statement

    TYPE_NAME  shift, and go to state 2
    INT        shift, and go to state 3
    '{'        shift, and go to state 19

    declaration             go to state 20
    declaration_specifiers  go to state 21
    type_specifier          go to state 7
    compound_statement      go to state 22
    declaration_list        go to state 23


State 9

   63 declarator: direct_declarator .
   66 direct_declarator: direct_declarator . '[' constant_expression ']'
   67                  | direct_declarator . '[' ']'
   68                  | direct_declarator . '(' parameter_type_list ')'
   69                  | direct_declarator . '(' identifier_list ')'
   70                  | direct_declarator . '(' ')'

    '('  shift, and go to state 24
    '['  shift, and go to state 25

    $default  reduce using rule 63 (declarator)


State 10

    0 $accept: translation_unit . $end
  121 translation_unit: translation_unit . external_declaration

    $end        shift, and go to state 26
    IDENTIFIER  shift, and go to state 1
    TYPE_NAME   shift, and go to state 2
    INT         shift, and go to state 3
    '('         shift, and go to state 4

    declaration             go to state 5
    declaration_specifiers  go to state 6
    type_specifier          go to state 7
    declarator              go to state 8
    direct_declarator       go to state 9
    external_declaration    go to state 27
    function_definition     go to state 12


State 11

  120 translation_unit: external_declaration .

    $default  reduce using rule 120 (translation_unit)


State 12

  122 external_declaration: function_definition .

    $default  reduce using rule 122 (external_declaration)


State 13

   65 direct_declarator: '(' declarator . ')'

    ')'  shift, and go to state 28


State 14

   51 declaration: declaration_specifiers ';' .

    $default  reduce using rule 51 (declaration)


State 15

   52 declaration: declaration_specifiers init_declarator_list . ';'
   56 init_declarator_list: init_declarator_list . ',' init_declarator

    ','  shift, and go to state 29
    ';'  shift, and go to state 30


State 16

   55 init_declarator_list: init_declarator .

    $default  reduce using rule 55 (init_declarator_list)


State 17

   57 init_declarator: declarator .
   58                | declarator . '=' initializer
  124 function_definition: declaration_specifiers declarator . declaration_list compound_statement
  125                    | declaration_specifiers declarator . compound_statement

    TYPE_NAME  shift, and go to state 2
    INT        shift, and go to state 3
    '='        shift, and go to state 31
    '{'        shift, and go to state 19

    $default  reduce using rule 57 (init_declarator)

    declaration             go to state 20
    declaration_specifiers  go to state 21
    type_specifier          go to state 7
    compound_statement      go to state 32
    declaration_list        go to state 33


State 18

   54 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 54 (declaration_specifiers)


State 19

  103 compound_statement: '{' . '}'
  104                   | '{' . statement_list '}'
  105                   | '{' . declaration_list '}'
  106                   | '{' . declaration_list statement_list '}'

    IDENTIFIER      shift, and go to state 34
    CONSTANT        shift, and go to state 35
    STRING_LITERAL  shift, and go to state 36
    TYPE_NAME       shift, and go to state 2
    INT             shift, and go to state 3
    IF              shift, and go to state 37
    WHILE           shift, and go to state 38
    FOR             shift, and go to state 39
    RETURN          shift, and go to state 40
    '('             shift, and go to state 41
    '&'             shift, and go to state 42
    '*'             shift, and go to state 43
    '+'             shift, and go to state 44
    '-'             shift, and go to state 45
    '!'             shift, and go to state 46
    ';'             shift, and go to state 47
    '{'             shift, and go to state 19
    '}'             shift, and go to state 48

    primary_expression         go to state 49
    postfix_expression         go to state 50
    unary_expression           go to state 51
    unary_operator             go to state 52
    cast_expression            go to state 53
    multiplicative_expression  go to state 54
    additive_expression        go to state 55
    shift_expression           go to state 56
    relational_expression      go to state 57
    equality_expression        go to state 58
    and_expression             go to state 59
    exclusive_or_expression    go to state 60
    inclusive_or_expression    go to state 61
    logical_and_expression     go to state 62
    logical_or_expression      go to state 63
    conditional_expression     go to state 64
    assignment_expression      go to state 65
    expression                 go to state 66
    declaration                go to state 20
    declaration_specifiers     go to state 21
    type_specifier             go to state 7
    statement                  go to state 67
    labeled_statement          go to state 68
    compound_statement         go to state 69
    declaration_list           go to state 70
    statement_list             go to state 71
    expression_statement       go to state 72
    selection_statement        go to state 73
    iteration_statement        go to state 74
    jump_statement             go to state 75


State 20

  107 declaration_list: declaration .

    $default  reduce using rule 107 (declaration_list)


State 21

   51 declaration: declaration_specifiers . ';'
   52            | declaration_specifiers . init_declarator_list ';'

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 4
    ';'         shift, and go to state 14

    init_declarator_list  go to state 15
    init_declarator       go to state 16
    declarator            go to state 76
    direct_declarator     go to state 9


State 22

  127 function_definition: declarator compound_statement .

    $default  reduce using rule 127 (function_definition)


State 23

  108 declaration_list: declaration_list . declaration
  126 function_definition: declarator declaration_list . compound_statement

    TYPE_NAME  shift, and go to state 2
    INT        shift, and go to state 3
    '{'        shift, and go to state 19

    declaration             go to state 77
    declaration_specifiers  go to state 21
    type_specifier          go to state 7
    compound_statement      go to state 78


State 24

   68 direct_declarator: direct_declarator '(' . parameter_type_list ')'
   69                  | direct_declarator '(' . identifier_list ')'
   70                  | direct_declarator '(' . ')'

    IDENTIFIER  shift, and go to state 79
    TYPE_NAME   shift, and go to state 2
    INT         shift, and go to state 3
    ')'         shift, and go to state 80

    declaration_specifiers  go to state 81
    type_specifier          go to state 7
    parameter_type_list     go to state 82
    parameter_list          go to state 83
    parameter_declaration   go to state 84
    identifier_list         go to state 85


State 25

   66 direct_declarator: direct_declarator '[' . constant_expression ']'
   67                  | direct_declarator '[' . ']'

    IDENTIFIER      shift, and go to state 86
    CONSTANT        shift, and go to state 35
    STRING_LITERAL  shift, and go to state 36
    '('             shift, and go to state 41
    ']'             shift, and go to state 87
    '&'             shift, and go to state 42
    '*'             shift, and go to state 43
    '+'             shift, and go to state 44
    '-'             shift, and go to state 45
    '!'             shift, and go to state 46

    primary_expression         go to state 49
    postfix_expression         go to state 50
    unary_expression           go to state 88
    unary_operator             go to state 52
    cast_expression            go to state 53
    multiplicative_expression  go to state 54
    additive_expression        go to state 55
    shift_expression           go to state 56
    relational_expression      go to state 57
    equality_expression        go to state 58
    and_expression             go to state 59
    exclusive_or_expression    go to state 60
    inclusive_or_expression    go to state 61
    logical_and_expression     go to state 62
    logical_or_expression      go to state 63
    conditional_expression     go to state 89
    constant_expression        go to state 90


State 26

    0 $accept: translation_unit $end .

    $default  accept


State 27

  121 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 121 (translation_unit)


State 28

   65 direct_declarator: '(' declarator ')' .

    $default  reduce using rule 65 (direct_declarator)


State 29

   56 init_declarator_list: init_declarator_list ',' . init_declarator

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 4

    init_declarator    go to state 91
    declarator         go to state 76
    direct_declarator  go to state 9


State 30

   52 declaration: declaration_specifiers init_declarator_list ';' .

    $default  reduce using rule 52 (declaration)


State 31

   58 init_declarator: declarator '=' . initializer

    IDENTIFIER      shift, and go to state 86
    CONSTANT        shift, and go to state 35
    STRING_LITERAL  shift, and go to state 36
    '('             shift, and go to state 41
    '&'             shift, and go to state 42
    '*'             shift, and go to state 43
    '+'             shift, and go to state 44
    '-'             shift, and go to state 45
    '!'             shift, and go to state 46
    '{'             shift, and go to state 92

    primary_expression         go to state 49
    postfix_expression         go to state 50
    unary_expression           go to state 51
    unary_operator             go to state 52
    cast_expression            go to state 53
    multiplicative_expression  go to state 54
    additive_expression        go to state 55
    shift_expression           go to state 56
    relational_expression      go to state 57
    equality_expression        go to state 58
    and_expression             go to state 59
    exclusive_or_expression    go to state 60
    inclusive_or_expression    go to state 61
    logical_and_expression     go to state 62
    logical_or_expression      go to state 63
    conditional_expression     go to state 64
    assignment_expression      go to state 93
    initializer                go to state 94


State 32

  125 function_definition: declaration_specifiers declarator compound_statement .

    $default  reduce using rule 125 (function_definition)


State 33

  108 declaration_list: declaration_list . declaration
  124 function_definition: declaration_specifiers declarator declaration_list . compound_statement

    TYPE_NAME  shift, and go to state 2
    INT        shift, and go to state 3
    '{'        shift, and go to state 19

    declaration             go to state 77
    declaration_specifiers  go to state 21
    type_specifier          go to state 7
    compound_statement      go to state 95


State 34

    1 primary_expression: IDENTIFIER .
  102 labeled_statement: IDENTIFIER . ':' statement

    ':'  shift, and go to state 96

    $default  reduce using rule 1 (primary_expression)


State 35

    2 primary_expression: CONSTANT .

    $default  reduce using rule 2 (primary_expression)


State 36

    3 primary_expression: STRING_LITERAL .

    $default  reduce using rule 3 (primary_expression)


State 37

  113 selection_statement: IF . '(' expression ')' statement
  114                    | IF . '(' expression ')' statement ELSE statement

    '('  shift, and go to state 97


State 38

  115 iteration_statement: WHILE . '(' expression ')' statement

    '('  shift, and go to state 98


State 39

  116 iteration_statement: FOR . '(' expression_statement expression_statement ')' statement
  117                    | FOR . '(' expression_statement expression_statement expression ')' statement

    '('  shift, and go to state 99


State 40

  118 jump_statement: RETURN . ';'
  119               | RETURN . expression ';'

    IDENTIFIER      shift, and go to state 86
    CONSTANT        shift, and go to state 35
    STRING_LITERAL  shift, and go to state 36
    '('             shift, and go to state 41
    '&'             shift, and go to state 42
    '*'             shift, and go to state 43
    '+'             shift, and go to state 44
    '-'             shift, and go to state 45
    '!'             shift, and go to state 46
    ';'             shift, and go to state 100

    primary_expression         go to state 49
    postfix_expression         go to state 50
    unary_expression           go to state 51
    unary_operator             go to state 52
    cast_expression            go to state 53
    multiplicative_expression  go to state 54
    additive_expression        go to state 55
    shift_expression           go to state 56
    relational_expression      go to state 57
    equality_expression        go to state 58
    and_expression             go to state 59
    exclusive_or_expression    go to state 60
    inclusive_or_expression    go to state 61
    logical_and_expression     go to state 62
    logical_or_expression      go to state 63
    conditional_expression     go to state 64
    assignment_expression      go to state 65
    expression                 go to state 101


State 41

    4 primary_expression: '(' . expression ')'
   20 cast_expression: '(' . type_name ')' cast_expression

    IDENTIFIER      shift, and go to state 86
    CONSTANT        shift, and go to state 35
    STRING_LITERAL  shift, and go to state 36
    TYPE_NAME       shift, and go to state 2
    INT             shift, and go to state 3
    '('             shift, and go to state 41
    '&'             shift, and go to state 42
    '*'             shift, and go to state 43
    '+'             shift, and go to state 44
    '-'             shift, and go to state 45
    '!'             shift, and go to state 46

    primary_expression         go to state 49
    postfix_expression         go to state 50
    unary_expression           go to state 51
    unary_operator             go to state 52
    cast_expression            go to state 53
    multiplicative_expression  go to state 54
    additive_expression        go to state 55
    shift_expression           go to state 56
    relational_expression      go to state 57
    equality_expression        go to state 58
    and_expression             go to state 59
    exclusive_or_expression    go to state 60
    inclusive_or_expression    go to state 61
    logical_and_expression     go to state 62
    logical_or_expression      go to state 63
    conditional_expression     go to state 64
    assignment_expression      go to state 65
    expression                 go to state 102
    type_specifier             go to state 103
    specifier_qualifier_list   go to state 104
    type_name                  go to state 105


State 42

   14 unary_operator: '&' .

    $default  reduce using rule 14 (unary_operator)


State 43

   15 unary_operator: '*' .

    $default  reduce using rule 15 (unary_operator)


State 44

   16 unary_operator: '+' .

    $default  reduce using rule 16 (unary_operator)


State 45

   17 unary_operator: '-' .

    $default  reduce using rule 17 (unary_operator)


State 46

   18 unary_operator: '!' .

    $default  reduce using rule 18 (unary_operator)


State 47

  111 expression_statement: ';' .

    $default  reduce using rule 111 (expression_statement)


State 48

  103 compound_statement: '{' '}' .

    $default  reduce using rule 103 (compound_statement)


State 49

    5 postfix_expression: primary_expression .

    $default  reduce using rule 5 (postfix_expression)


State 50

    6 postfix_expression: postfix_expression . '[' expression ']'
    7                   | postfix_expression . '(' ')'
    8                   | postfix_expression . '(' argument_expression_list ')'
    9                   | postfix_expression . '.' IDENTIFIER
   12 unary_expression: postfix_expression .

    '('  shift, and go to state 106
    '['  shift, and go to state 107
    '.'  shift, and go to state 108

    $default  reduce using rule 12 (unary_expression)


State 51

   19 cast_expression: unary_expression .
   46 assignment_expression: unary_expression . assignment_operator assignment_expression

    '='  shift, and go to state 109

    $default  reduce using rule 19 (cast_expression)

    assignment_operator  go to state 110


State 52

   13 unary_expression: unary_operator . cast_expression

    IDENTIFIER      shift, and go to state 86
    CONSTANT        shift, and go to state 35
    STRING_LITERAL  shift, and go to state 36
    '('             shift, and go to state 41
    '&'             shift, and go to state 42
    '*'             shift, and go to state 43
    '+'             shift, and go to state 44
    '-'             shift, and go to state 45
    '!'             shift, and go to state 46

    primary_expression  go to state 49
    postfix_expression  go to state 50
    unary_expression    go to state 88
    unary_operator      go to state 52
    cast_expression     go to state 111


State 53

   21 multiplicative_expression: cast_expression .

    $default  reduce using rule 21 (multiplicative_expression)


State 54

   22 multiplicative_expression: multiplicative_expression . '*' cast_expression
   23                          | multiplicative_expression . '/' cast_expression
   24                          | multiplicative_expression . '%' cast_expression
   25 additive_expression: multiplicative_expression .
